--- a/text_model/dockerfile
+++ b/text_model/dockerfile
@@ -1,4 +1,4 @@
-FROM r8.im/replicate/llama-7b@sha256:ac808388e2e9d8ed35a5bf2eaa7d83f0ad53f9e3df31a42e4eb0a0c3249b3165
+FROM r8.im/meta/llama-2-7b-chat@sha256:8e6975e5ed6174911a6ff3d60540dfd4844201974602551e10e9e87ab143d81e
 
 # Stay running
 # CMD ["tail", "-f", "/dev/null"]
